--- a/Contact.html
+++ b/Contact.html
@@ -1,54 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Contact Us - PC Centre</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Bootstrap Icons -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
-
-  <style>
-    
-
-    .contact-box{
-      background: white;
-      border-radius: 10px;
-      padding: 30px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.1);
-    }
-
-    .contact-info i{
-      font-size: 22px;
-      color: #0047AB;
-      margin-right: 10px;
-    }
-
-    .contact-info p{
-      margin: 0;
-      color: #333;
-    }
-
-    .btn-primary{
-      background-color: #0047AB;
-      border: none;
-    }
-
-    .btn-primary:hover{
-      background-color: #003080;
-    }
-
-    .map{
-      border-radius: 10px;
-      overflow: hidden;
-    }
-  </style>
-</head>
-<body>
-<!-- header -->
+  <head>
+    <meta charset="UTF-8" />
+    <title>Contact Us - PC Centre</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <!-- header -->
     <div
       class="container-fluid bg-dark text-white py-2 px-4 d-flex justify-content-between align-items-center"
     >
@@ -61,138 +28,171 @@
         <span>Mon-Sat: 9:00 AM - 8:00 PM</span>
       </div>
     </div>
-    <!-- Navbar -->
-    <nav class="nab navbar navbar-expand-lg sticky-top" style="background-color:#0047AB;">
-  <div class="container-fluid">
 
-    <!-- LOGO -->
-    <a class="navbar-brand text-white" href="#">
-      <img src="images/logo (2).png" alt="logo" style="height:50px; width:50px;">
-    </a>
+    <nav
+      class="nab navbar navbar-expand-lg sticky-top shadow"
+      style="background-color: #0047ab"
+    >
+      <div class="container-fluid">
+        <a class="navbar-brand text-white" href="#">
+          <img
+            src="images/logo (2).png"
+            alt="logo"
+            style="height: 50px; width: 50px"
+          />
+        </a>
 
-    <!-- TOGGLER -->
-    <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+        <button
+          class="navbar-toggler text-white border-white"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <!-- NAV LINKS -->
-    <div class="collapse navbar-collapse" id="navbarSupportedContent" style="padding-left: 300px;">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul
+            class="navbar-nav me-auto mb-2 mb-lg-0"
+            style="padding-left: 300px"
+          >
+            <li class="nav-item">
+              <a class="nav-link active text-white nav-link-custom" href="index.html">Home</a>
+            </li>
 
-        <li class="nav-item">
-          <a class="nav-link active text-white" href="index.html">Home</a>
-        </li>
+            <li class="nav-item">
+              <a class="nav-link text-white nav-link-custom" href="product.html">Products</a>
+            </li>
 
-        <li class="nav-item">
-          <a class="nav-link text-white" href="product.html">Products</a>
-        </li>
+            <li class="nav-item">
+              <a class="nav-link text-white nav-link-custom" href="#">Help & FAQs</a>
+            </li>
 
-        <li class="nav-item">
-          <a class="nav-link text-white" href="#">Help & FAQs</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="Contact.html">Contact Us</a>
-        </li>
+            <li class="nav-item">
+              <a class="nav-link text-white nav-link-custom" href="Contact.html">Contact Us</a>
+            </li>
 
-        <li class="nav-item dropdown">
-          <a class="nav-link text-white" href="#" role="button" data-bs-toggle="dropdown">
-            Company Catalogs
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Dell</a></li>
-            <li><a class="dropdown-item" href="#">Acer</a></li>
-            <li><a class="dropdown-item" href="#">Toshiba</a></li>
-            <li><a class="dropdown-item" href="#">HP</a></li>
-            <li><a class="dropdown-item" href="#">ASUS</a></li>
-            <li><a class="dropdown-item" href="#">Lenovo</a></li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link text-white"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+              >
+                Company Catalogs
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="Dell.html">Dell</a></li>
+                <li><a class="dropdown-item" href="#">Acer</a></li>
+                <li><a class="dropdown-item" href="#">Toshiba</a></li>
+                <li><a class="dropdown-item" href="#">HP</a></li>
+                <li><a class="dropdown-item" href="#">ASUS</a></li>
+                <li><a class="dropdown-item" href="#">Lenovo</a></li>
+              </ul>
+            </li>
           </ul>
-        </li>
-      </ul>
 
-      <!-- RIGHT ICONS -->
-      <div class="ic d-flex gap-3">
-        <h5><i class="bi bi-search text-white"></i></h5>
-        <h5>
-          <i class="bi bi-cart text-white">
-            <sup><span class="badge text-bg-danger">0</span></sup>
-          </i>
-        </h5>
-      </div>
-    </div>
+          <div class="d-flex align-items-center gap-3 me-3">
+            <i class="bi bi-search text-white h5 m-0"></i>
 
-  </div>
-</nav>
-
-<div class="container my-5">
-  <div class="row g-4">
-
-
-    <div class="col-md-7">
-      <div class="contact-box">
-        <h4 class="mb-4">Send Us a Message</h4>
-
-        <form>
-          <div class="row mb-3">
-            <div class="col-md-6">
-              <input type="text" class="form-control" placeholder="Your Name" required>
-            </div>
-            <div class="col-md-6">
-              <input type="email" class="form-control" placeholder="Your Email" required>
+            <div class="position-relative">
+              <i class="bi bi-cart text-white h5 m-0"></i>
+              <span
+                class="badge bg-danger position-absolute top-0 start-100 translate-middle px-2"
+                >0</span
+              >
             </div>
           </div>
+        </div>
+      </div>
+    </nav>
 
-          <div class="mb-3">
-            <input type="text" class="form-control" placeholder="Subject" required>
+    <div class="container my-5">
+      <div class="row g-4">
+        <div class="col-md-7">
+          <div class="contact-box">
+            <h4 class="mb-4">Send Us a Message</h4>
+
+            <form>
+              <div class="row mb-3">
+                <div class="col-md-6">
+                  <input
+                    type="text"
+                    class="form-control"
+                    placeholder="Your Name"
+                    required
+                  />
+                </div>
+                <div class="col-md-6">
+                  <input
+                    type="email"
+                    class="form-control"
+                    placeholder="Your Email"
+                    required
+                  />
+                </div>
+              </div>
+
+              <div class="mb-3">
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Subject"
+                  required
+                />
+              </div>
+
+              <div class="mb-3">
+                <textarea
+                  class="form-control"
+                  rows="5"
+                  placeholder="Your Message"
+                  required
+                ></textarea>
+              </div>
+
+              <button type="submit" class="btn btn-primary px-4">
+                Send Message
+              </button>
+            </form>
           </div>
+        </div>
 
-          <div class="mb-3">
-            <textarea class="form-control" rows="5" placeholder="Your Message" required></textarea>
+        <div class="col-md-5">
+          <div class="contact-box contact-info">
+            <h4 class="mb-4">Contact Information</h4>
+
+            <div class="d-flex align-items-center mb-3">
+              <i class="bi bi-geo-alt"></i>
+              <span class="ps-2">123 Tech Street, Downtown</span>
+            </div>
+
+            <div class="d-flex align-items-center mb-3">
+              <i class="bi bi-telephone"></i>
+              <span class="ps-2">+1 (555) 123-4567</span>
+            </div>
+
+            <div class="d-flex align-items-center mb-4">
+              <i class="bi bi-envelope"></i>
+              <span class="ps-2">support@pccentre.com</span>
+            </div>
+
+            <div class="map">
+              <iframe
+                src="https://maps.google.com/maps?q=karachi&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                width="100%"
+                height="250"
+                style="border: 0"
+                allowfullscreen
+                loading="lazy"
+              >
+              </iframe>
+            </div>
           </div>
-
-          <button type="submit" class="btn btn-primary px-4">Send Message</button>
-        </form>
+        </div>
       </div>
     </div>
-
-
-    <div class="col-md-5">
-      <div class="contact-box contact-info">
-
-        <h4 class="mb-4">Contact Information</h4>
-
-        <div class="d-flex align-items-center mb-3">
-          <i class="bi bi-geo-alt"></i>
-          <p>123 Tech Street, Downtown</p>
-        </div>
-
-        <div class="d-flex align-items-center mb-3">
-          <i class="bi bi-telephone"></i>
-          <p>+1 (555) 123-4567</p>
-        </div>
-
-        <div class="d-flex align-items-center mb-4">
-          <i class="bi bi-envelope"></i>
-          <p>support@pccentre.com</p>
-        </div>
-
-        
-        <div class="map">
-          <iframe 
-            src="https://maps.google.com/maps?q=karachi&t=&z=13&ie=UTF8&iwloc=&output=embed"
-            width="100%" 
-            height="250" 
-            style="border:0;" 
-            allowfullscreen 
-            loading="lazy">
-          </iframe>
-        </div>
-
-      </div>
-    </div>
-
-  </div>
-</div>
-<!----------------- Footer ------------------->
+    <!-- Footer -->
     <footer class="container-fluid bg-dark text-white pt-4">
       <div class="row px-4">
         <div class="col-md-3 mb-3">
@@ -201,48 +201,49 @@
             Your trusted IT solutions partner with over 2 years of experience
             and 1,000+ products from leading manufacturers.
           </p>
-          <i class="bi bi-facebook me-2"></i>
-          <i class="bi bi-twitter me-2"></i>
-          <i class="bi bi-instagram me-2"></i>
-          <i class="bi bi-linkedin"></i>
+          <i class="bi bi-facebook me-2 hovee"></i>
+          <i class="bi bi-twitter me-2 hovee"></i>
+          <i class="bi bi-instagram me-2 hovee"></i>
+          <i class="bi bi-linkedin hovee"></i>
         </div>
 
         <div class="col-md-3 mb-3" style="padding-left: 90px">
           <h5>Quick Links</h5>
-          <p>Home</p>
-          <p>Products</p>
-          <p>Help & Support</p>
-          <p>About Us</p>
-          <p>Contact</p>
+          <p class="hovee">Home</p>
+          <p class="hovee">Products</p>
+          <p class="hovee">Help & Support</p>
+          <p class="hovee">About Us</p>
+          <a href="Contact.html" style="text-decoration: none; color: white">
+            <p class="hovee">Contact</p>
+            </a>
         </div>
 
         <div class="col-md-3 mb-3" style="padding-left: 90px">
           <h5>Categories</h5>
-          <p>Notebooks</p>
-          <p>Displays</p>
-          <p>Storage</p>
-          <p>Printers</p>
-          <p>Accessories</p>
+          <p class="hovee">Notebooks</p>
+          <p class="hovee">Displays</p>
+          <p class="hovee">Storage</p>
+          <p class="hovee">Printers</p>
+          <p class="hovee">Accessories</p>
         </div>
 
         <div class="col-md-3 mb-3" style="padding-left: 90px">
           <h5>Contact Us</h5>
-          <p><i class="bi bi-geo-alt"></i> 123 Tech Street, Downtown</p>
+          <p><i class="bi bi-geo-alt"></i> 123 Tech Street, Karachi</p>
           <p><i class="bi bi-telephone"></i> +1 (555) 123-4567</p>
           <p><i class="bi bi-envelope"></i> support@pccentre.com</p>
         </div>
       </div>
 
-      <hr />
+      <hr class="container" />
 
       <div class="text-center pb-3">
         <p class="mb-0">
-          © 2025 PC Centre. All rights reserved. | Privacy Policy |
-          Terms of Service
+          © 2025 PC Centre. All rights reserved. | Privacy Policy | Terms of
+          Service
         </p>
       </div>
     </footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
