--- a/fast_delivery.html
+++ b/fast_delivery.html
@@ -2,25 +2,52 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PC Centre</title>
-    <link rel="icon" href="images/logo (2).png" />
+    <title>Fast Delivery - PC Centre</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="style.css" />
     <link
-      rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+      rel="stylesheet"
     />
-    <script
-      src="https://code.jquery.com/jquery-3.7.1.js"
-      integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
-      crossorigin="anonymous"
-    ></script>
-    <style></style>
+
+    <style>
+      .hero {
+        background: linear-gradient(to right, #0047ab, #002f6c);
+        color: white;
+        padding: 80px 20px;
+        text-align: center;
+      }
+
+      .icon-box i {
+        font-size: 40px;
+        color: #0047ab;
+      }
+
+      .icon-box {
+        background: #fff;
+        border-radius: 10px;
+        padding: 30px;
+        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+        transition: 0.3s;
+      }
+
+      .icon-box:hover {
+        transform: translateY(-5px);
+      }
+
+      .hovee{
+  transition: all 0.3s ease;
+}
+.hovee:hover{
+  color:#007bff;
+}
+    </style>
+    <!-- <link rel="stylesheet" href="style.css"> -->
   </head>
+
   <body>
     <!-- header -->
     <div
@@ -113,69 +140,65 @@
         </div>
       </div>
     </nav>
-    <!-- --------------------add to cart picture------------------- -->
-    <div class="container1" style="background-color: white">
-      <!-- Left Side Image -->
-      <div class="product-img">
-        <img src="images/acer laptop.jpg" alt="pic" id="productImage" />
+
+    <!-- HERO  -->
+    <section class="hero">
+      <h1 class="fw-bold">Fast & Reliable Delivery</h1>
+      <p class="mt-3">
+        Get your PC Centre products delivered quickly, safely, and on time.
+      </p>
+    </section>
+
+    <div class="container my-5">
+      <div class="row text-center g-4">
+        <div class="col-md-4">
+          <div class="icon-box">
+            <i class="bi bi-truck"></i>
+            <h5 class="mt-3">Same Day Dispatch</h5>
+            <p>Orders placed before 3 PM are dispatched on the same day.</p>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="icon-box">
+            <i class="bi bi-clock-history"></i>
+            <h5 class="mt-3">24–48 Hours Delivery</h5>
+            <p>Fast delivery across major cities within 24 to 48 hours.</p>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="icon-box">
+            <i class="bi bi-shield-check"></i>
+            <h5 class="mt-3">Safe Packaging</h5>
+            <p>Secure and damage-free packaging for all products.</p>
+          </div>
+        </div>
       </div>
+    </div>
 
-      <!-- Right Side Details -->
-      <div class="addtocart" style="margin-top: 30px">
-        <h3 id="companyName">Acer</h3>
-        <p class="product-title" id="productTitle">
-          Acer Aspire 5 Business Laptop
-        </p>
-
-        <p id="rating">⭐⭐⭐⭐☆ 4.4 (521 reviews)</p>
-
-        <p class="price" id="price">$649.99</p>
-        <p class="stock">✅ In Stock</p>
-
-        <h5>Key Features</h5>
-        <ul class="features" id="featuresList">
-          <li>15.6" Full HD IPS Display</li>
-          <li>Intel Core i5-1235U</li>
-          <li>8GB DDR4 RAM</li>
-          <li>512GB NVMe SSD</li>
-          <li>Backlit Keyboard</li>
-        </ul>
-
-        <!-- Quantity + Add To Cart Same Line -->
-        <div class="cart-row">
-          <input type="number" value="1" min="1" />
-          <button class="cart-btn">Add To Cart</button>
-        </div>
-        <br />
-
-        <div class="secondary-actions">
-          <button class="add-to-wishlist-btn">🤍 Add to Wishlist</button>
-          <button class="share-btn">🔗 Share</button>
+    <div class="container mb-5">
+      <div class="row">
+        <div class="col-md-6">
+          <h4>Delivery Coverage</h4>
+          <p>
+            PC Centre delivers products all over Pakistan through trusted <br />
+            courier partners ensuring fast and safe shipping.
+          </p>
+          <ul>
+            <li>Karachi, Lahore, Islamabad</li>
+            <li>Rawalpindi, Faisalabad, Multan</li>
+            <li>Other cities within 3–5 working days</li>
+          </ul>
         </div>
 
-        <hr class="mini-line" />
-
-        <div class="service-features">
-          <div class="feature-item">
-            <a href="fast_delivery.html" class="text-decoration-none">
-              <div class="feature-icon">🚚</div>
-            </a>
-            <p>Fast Delivery</p>
-          </div>
-
-          <div class="feature-item">
-            <a href="warranty.html" class="text-decoration-none text-black">
-              <div class="feature-icon">🛡️</div>
-            </a>
-            <p>Warranty</p>
-          </div>
-
-          <div class="feature-item">
-            <a href="support.html" class="text-decoration-none">
-            <div class="feature-icon">🎧</div>
-            </a>
-            <p>Support</p>
-          </div>
+        <div class="col-md-6">
+          <h4>Important Notes</h4>
+          <ul>
+            <li>Delivery time may vary during sales or public holidays</li>
+            <li>Tracking number provided after dispatch</li>
+            <li>Cash on Delivery available in selected cities</li>
+          </ul>
         </div>
       </div>
     </div>
@@ -232,7 +255,7 @@
         </p>
       </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-    <script></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
