--- a/index.html
+++ b/index.html
@@ -34,46 +34,61 @@
         <span>Mon-Sat: 9:00 AM - 8:00 PM</span>
       </div>
     </div>
-    <!-- Navbar -->
-    <nav class="nab navbar navbar-expand-lg sticky-top">
+
+    <nav
+      class="nab navbar navbar-expand-lg sticky-top shadow"
+      style="background-color: #0047ab"
+    >
       <div class="container-fluid">
-        <a class="navbar-brand text-white" href="#"
-          ><img
+        <a class="navbar-brand text-white" href="#">
+          <img
             src="images/logo (2).png"
             alt="logo"
             style="height: 50px; width: 50px"
-        /></a>
+          />
+        </a>
+
+        <button
+          class="navbar-toggler text-white border-white"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="l nav-item">
-              <a
-                class="na nav-link active text-white"
-                aria-current="page"
-                href="index.html"
-                >Home</a
-              >
-            </li>
+          <ul
+            class="navbar-nav me-auto mb-2 mb-lg-0"
+            style="padding-left: 300px"
+          >
             <li class="nav-item">
-              <a class="na nav-link text-white" href="product.html">Products</a>
+              <a class="nav-link active text-white nav-link-custom" href="index.html">Home</a>
             </li>
+
             <li class="nav-item">
-              <a class="na nav-link text-white" href="Contact.html">Help & FAQs</a>
+              <a class="nav-link text-white nav-link-custom" href="product.html">Products</a>
             </li>
+
             <li class="nav-item">
-          <a class="nav-link text-white" href="Contact.html">Contact Us</a>
-        </li>
+              <a class="nav-link text-white nav-link-custom" href="#">Help & FAQs</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link text-white nav-link-custom" href="Contact.html">Contact Us</a>
+            </li>
+
             <li class="nav-item dropdown">
               <a
-                class="na nav-link text-white"
+                class="nav-link text-white"
                 href="#"
                 role="button"
                 data-bs-toggle="dropdown"
-                aria-expanded="false"
               >
                 Company Catalogs
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Dell</a></li>
+                <li><a class="dropdown-item" href="Dell.html">Dell</a></li>
                 <li><a class="dropdown-item" href="#">Acer</a></li>
                 <li><a class="dropdown-item" href="#">Toshiba</a></li>
                 <li><a class="dropdown-item" href="#">HP</a></li>
@@ -82,16 +97,16 @@
               </ul>
             </li>
           </ul>
-          <div class="ic" role="search">
-            <div>
-              <h5><i class="bi bi-search text-white"></i></h5>
-            </div>
-            <div>
-              <h5>
-                <i class="bi bi-cart text-white"
-                  ><sup><span class="badge text-bg-danger">0</span></sup></i
-                >
-              </h5>
+
+          <div class="d-flex align-items-center gap-3 me-3">
+            <i class="bi bi-search text-white h5 m-0"></i>
+
+            <div class="position-relative">
+              <i class="bi bi-cart text-white h5 m-0"></i>
+              <span
+                class="badge bg-danger position-absolute top-0 start-100 translate-middle px-2"
+                >0</span
+              >
             </div>
           </div>
         </div>
@@ -462,33 +477,35 @@
             Your trusted IT solutions partner with over 2 years of experience
             and 1,000+ products from leading manufacturers.
           </p>
-          <i class="bi bi-facebook me-2"></i>
-          <i class="bi bi-twitter me-2"></i>
-          <i class="bi bi-instagram me-2"></i>
-          <i class="bi bi-linkedin"></i>
+          <i class="bi bi-facebook me-2 hovee"></i>
+          <i class="bi bi-twitter me-2 hovee"></i>
+          <i class="bi bi-instagram me-2 hovee"></i>
+          <i class="bi bi-linkedin hovee"></i>
         </div>
 
         <div class="col-md-3 mb-3" style="padding-left: 90px">
           <h5>Quick Links</h5>
-          <p>Home</p>
-          <p>Products</p>
-          <p>Help & Support</p>
-          <p>About Us</p>
-          <a href="Contact.html" style="text-decoration: none; color: white;"><p>Contact</p></a>
+          <p class="hovee">Home</p>
+          <p class="hovee">Products</p>
+          <p class="hovee">Help & Support</p>
+          <p class="hovee">About Us</p>
+          <a href="Contact.html" style="text-decoration: none; color: white">
+            <p class="hovee">Contact</p>
+            </a>
         </div>
 
         <div class="col-md-3 mb-3" style="padding-left: 90px">
           <h5>Categories</h5>
-          <p>Notebooks</p>
-          <p>Displays</p>
-          <p>Storage</p>
-          <p>Printers</p>
-          <p>Accessories</p>
+          <p class="hovee">Notebooks</p>
+          <p class="hovee">Displays</p>
+          <p class="hovee">Storage</p>
+          <p class="hovee">Printers</p>
+          <p class="hovee">Accessories</p>
         </div>
 
         <div class="col-md-3 mb-3" style="padding-left: 90px">
           <h5>Contact Us</h5>
-          <p><i class="bi bi-geo-alt"></i> 123 Tech Street, Downtown</p>
+          <p><i class="bi bi-geo-alt"></i> 123 Tech Street, Karachi</p>
           <p><i class="bi bi-telephone"></i> +1 (555) 123-4567</p>
           <p><i class="bi bi-envelope"></i> support@pccentre.com</p>
         </div>
@@ -498,57 +515,12 @@
 
       <div class="text-center pb-3">
         <p class="mb-0">
-          © 2025 PC Centre. All rights reserved. | Privacy Policy |
-          Terms of Service
+          © 2025 PC Centre. All rights reserved. | Privacy Policy | Terms of
+          Service
         </p>
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-      const texts = [
-    "PC Centre",
-    "Your Trusted IT Partner",
-    "Best Computer Products & Services",
-  ];
-
-  let i = 0;
-  let j = 0;
-  let isDeleting = false;
-
-  function typeLoop() {
-    const current = texts[i];
-    const typingText = $("#typing-text");
-
-    if (!isDeleting) {
-      typingText.text(current.substring(0, j + 1));
-      j++;
-    } else {
-      typingText.text(current.substring(0, j - 1));
-      j--;
-    }
-
-    let speed = isDeleting ? 50 : 120;
-
-    // ✅ Jab poora text likh jaye → 1 second rukay
-    if (!isDeleting && j === current.length) {
-      speed = 1000;
-      isDeleting = true;
-    }
-
-    // ✅ Jab delete complete ho → next text
-    else if (isDeleting && j === 0) {
-      isDeleting = false;
-      i = (i + 1) % texts.length;
-      speed = 500;
-    }
-
-    setTimeout(typeLoop, speed);
-  }
-
-  // ✅ jQuery document ready
-  $(document).ready(function () {
-    typeLoop();
-  });
-    </script>
+    <script src="app.js"></script>
   </body>
 </html>
