--- a/support.html
+++ b/support.html
@@ -2,25 +2,49 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PC Centre</title>
-    <link rel="icon" href="images/logo (2).png" />
+    <title>Support - PC Centre</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Bootstrap CSS -->
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="style.css" />
+    <!-- Bootstrap Icons -->
     <link
-      rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+      rel="stylesheet"
     />
-    <script
-      src="https://code.jquery.com/jquery-3.7.1.js"
-      integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
-      crossorigin="anonymous"
-    ></script>
-    <style></style>
+
+    <style>
+      .support-hero {
+        background: linear-gradient(to right, #0047ab, #002f6c);
+        color: white;
+        padding: 70px 20px;
+        text-align: center;
+      }
+
+      .support-box {
+        background: #fff;
+        padding: 30px;
+        border-radius: 10px;
+        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+        transition: 0.3s;
+        height: 100%;
+      }
+
+      .support-box:hover {
+        transform: translateY(-5px);
+      }
+
+      .support-box i {
+        font-size: 40px;
+        color: #0047ab;
+      }
+    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
+
   <body>
     <!-- header -->
     <div
@@ -113,68 +137,99 @@
         </div>
       </div>
     </nav>
-    <!-- --------------------add to cart picture------------------- -->
-    <div class="container1" style="background-color: white">
-      <!-- Left Side Image -->
-      <div class="product-img">
-        <img src="images/acer laptop.jpg" alt="pic" id="productImage" />
+
+    <!-- HERO -->
+    <section class="support-hero">
+      <h1 class="fw-bold">PC Centre Support</h1>
+      <p class="mt-2">We are here to help you — anytime, anywhere</p>
+    </section>
+
+    <div class="container my-5">
+      <div class="row g-4 text-center">
+        <div class="col-md-4">
+          <div class="support-box">
+            <i class="bi bi-headset"></i>
+            <h5 class="mt-3">Customer Support</h5>
+            <p>
+              Contact our support team for product help, orders, and inquiries.
+            </p>
+            <p class="fw-bold">📞 +1 (555) 123-4567</p>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="support-box">
+            <i class="bi bi-envelope"></i>
+            <h5 class="mt-3">Email Support</h5>
+            <p>Email us your issues and we’ll respond within 24 hours.</p>
+            <p class="fw-bold">📧 support@pccentre.com</p>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="support-box">
+            <i class="bi bi-chat-dots"></i>
+            <h5 class="mt-3">Live Chat</h5>
+            <p>Chat with our support agents for quick solutions.</p>
+            <p class="fw-bold">🕘 9 AM – 8 PM</p>
+          </div>
+        </div>
       </div>
+    </div>
 
-      <!-- Right Side Details -->
-      <div class="addtocart" style="margin-top: 30px">
-        <h3 id="companyName">Acer</h3>
-        <p class="product-title" id="productTitle">
-          Acer Aspire 5 Business Laptop
-        </p>
+    <div class="container mb-5">
+      <h3 class="mb-4 text-center">Frequently Asked Questions</h3>
 
-        <p id="rating">⭐⭐⭐⭐☆ 4.4 (521 reviews)</p>
-
-        <p class="price" id="price">$649.99</p>
-        <p class="stock">✅ In Stock</p>
-
-        <h5>Key Features</h5>
-        <ul class="features" id="featuresList">
-          <li>15.6" Full HD IPS Display</li>
-          <li>Intel Core i5-1235U</li>
-          <li>8GB DDR4 RAM</li>
-          <li>512GB NVMe SSD</li>
-          <li>Backlit Keyboard</li>
-        </ul>
-
-        <!-- Quantity + Add To Cart Same Line -->
-        <div class="cart-row">
-          <input type="number" value="1" min="1" />
-          <button class="cart-btn">Add To Cart</button>
-        </div>
-        <br />
-
-        <div class="secondary-actions">
-          <button class="add-to-wishlist-btn">🤍 Add to Wishlist</button>
-          <button class="share-btn">🔗 Share</button>
+      <div class="accordion" id="faqAccordion">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button"
+              data-bs-toggle="collapse"
+              data-bs-target="#faq1"
+            >
+              How can I track my order?
+            </button>
+          </h2>
+          <div id="faq1" class="accordion-collapse collapse show">
+            <div class="accordion-body">
+              After order dispatch, a tracking number will be sent to your
+              email.
+            </div>
+          </div>
         </div>
 
-        <hr class="mini-line" />
-
-        <div class="service-features">
-          <div class="feature-item">
-            <a href="fast_delivery.html" class="text-decoration-none">
-              <div class="feature-icon">🚚</div>
-            </a>
-            <p>Fast Delivery</p>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button collapsed"
+              data-bs-toggle="collapse"
+              data-bs-target="#faq2"
+            >
+              Do products have warranty?
+            </button>
+          </h2>
+          <div id="faq2" class="accordion-collapse collapse">
+            <div class="accordion-body">
+              Yes, all products include official manufacturer warranty.
+            </div>
           </div>
+        </div>
 
-          <div class="feature-item">
-            <a href="warranty.html" class="text-decoration-none text-black">
-              <div class="feature-icon">🛡️</div>
-            </a>
-            <p>Warranty</p>
-          </div>
-
-          <div class="feature-item">
-            <a href="support.html" class="text-decoration-none">
-            <div class="feature-icon">🎧</div>
-            </a>
-            <p>Support</p>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button collapsed"
+              data-bs-toggle="collapse"
+              data-bs-target="#faq3"
+            >
+              What is your return policy?
+            </button>
+          </h2>
+          <div id="faq3" class="accordion-collapse collapse">
+            <div class="accordion-body">
+              Returns are accepted within 7 days for defective products.
+            </div>
           </div>
         </div>
       </div>
@@ -232,7 +287,7 @@
         </p>
       </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-    <script></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
