--- a/Dell.html
+++ b/Dell.html
@@ -109,7 +109,7 @@
     </nav>
 
           <!-- RIGHT ICONS -->
-          <div class="d-flex align-items-center gap-3 me-3">
+          <!-- <div class="d-flex align-items-center gap-3 me-3">
             <i class="bi bi-search text-white h5 m-0"></i>
 
             <div class="position-relative">
@@ -122,7 +122,7 @@
           </div>
         </div>
       </div>
-    </nav>
+    </nav> -->
 
     <!-- ------------------info section------------ -->
     <div class="head">
