--- a/product.html
+++ b/product.html
@@ -38,6 +38,7 @@
     <nav
       class="nab navbar navbar-expand-lg sticky-top shadow"
       style="background-color: #0047ab"
+      class="navbarr"
     >
       <div class="container-fluid">
         <a class="navbar-brand text-white" href="#">
@@ -63,11 +64,11 @@
             style="padding-left: 300px"
           >
             <li class="nav-item">
-              <a class="nav-link active text-white nav-link-custom" href="index.html">Home</a>
+              <a class="nav-link text-white nav-link-custom" href="index.html">Home</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link text-white nav-link-custom" href="product.html">Products</a>
+              <a class="nav-link active text-white nav-link-custom" href="product.html">Products</a>
             </li>
 
             <li class="nav-item">
