--- a/Contact.html
+++ b/Contact.html
@@ -13,6 +13,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css">
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.js"
+      integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <!-- header -->
@@ -57,7 +62,7 @@
             style="padding-left: 300px"
           >
             <li class="nav-item">
-              <a class="nav-link active text-white nav-link-custom" href="index.html">Home</a>
+              <a class="nav-link text-white nav-link-custom" href="index.html">Home</a>
             </li>
 
             <li class="nav-item">
@@ -69,7 +74,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link text-white nav-link-custom" href="Contact.html">Contact Us</a>
+              <a class="nav-link text-white active nav-link-custom" href="Contact.html">Contact Us</a>
             </li>
 
             <li class="nav-item dropdown">
@@ -118,7 +123,7 @@
                 <div class="col-md-6">
                   <input
                     type="text"
-                    class="form-control"
+                    class="form-control iinput"
                     placeholder="Your Name"
                     required
                   />
@@ -126,7 +131,7 @@
                 <div class="col-md-6">
                   <input
                     type="email"
-                    class="form-control"
+                    class="form-control iinput"
                     placeholder="Your Email"
                     required
                   />
@@ -136,7 +141,7 @@
               <div class="mb-3">
                 <input
                   type="text"
-                  class="form-control"
+                  class="form-control iinput"
                   placeholder="Subject"
                   required
                 />
@@ -144,7 +149,7 @@
 
               <div class="mb-3">
                 <textarea
-                  class="form-control"
+                  class="form-control iinput"
                   rows="5"
                   placeholder="Your Message"
                   required
@@ -245,5 +250,6 @@
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
