--- a/Contact.html
+++ b/Contact.html
@@ -70,7 +70,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link text-white nav-link-custom" href="#">Help & FAQs</a>
+              <a class="nav-link text-white nav-link-custom" href="faqs.html">Help & FAQs</a>
             </li>
 
             <li class="nav-item">
