--- a/product.html
+++ b/product.html
@@ -19,6 +19,93 @@
       integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
       crossorigin="anonymous"
     ></script>
+    <style>
+      
+
+.cards {
+  margin-bottom: 30px;
+}
+
+.cards .card {
+  width: 100% !important;
+  border: none;
+  border-radius: 16px;
+  background: #fff;
+  box-shadow: 0 8px 25px rgba(0,0,0,0.08);
+  transition: 0.3s ease;
+  height: 100%;
+}
+
+.cards .card:hover {
+  transform: translateY(-6px);
+  box-shadow: 0 14px 35px rgba(0,0,0,0.12);
+}
+
+.cards .card-img-top {
+  height: 220px;
+  width: 100%;
+  object-fit: contain;
+  background: #f8f9fa;
+  padding: 15px;
+}
+
+.cards .card-body {
+  padding: 18px;
+}
+
+.cards .card-title {
+  font-weight: 600;
+}
+
+.cards .card-text {
+  font-size: 14px;
+  color: #555;
+  min-height: 40px;
+}
+
+
+
+.list-view .cards {
+  width: 100%;
+  height: 180px;
+}
+
+.list-view .card {
+  display: flex;
+  flex-direction: row;
+}
+
+.list-view .card-img-top {
+  width: 250px;
+  height: auto;
+}
+
+.list-view .card-body {
+  flex: 1;
+}
+
+
+
+.product-toolbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 20px;
+}
+
+.view-btn {
+  border: 1px solid #ccc;
+  background: white;
+  padding: 6px 10px;
+  cursor: pointer;
+}
+
+.view-btn.active {
+  background: #0047ab;
+  color: white;
+}
+
+    </style>
   </head>
   <body>
     <!-- header -->
@@ -72,7 +159,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link text-white nav-link-custom" href="#">Help & FAQs</a>
+              <a class="nav-link text-white nav-link-custom" href="faqs.html">Help & FAQs</a>
             </li>
 
             <li class="nav-item">
@@ -116,7 +203,7 @@
     <!-- ---------------------categories-------------------------- -->
     <div
       class="categories align-items-center"
-      style="float: left; width: 250px; padding-right: 20px"
+      style="float: left; width: 250px; padding-right: 20px;"
     >
       <p class="heading fw-bold mt-4">Categories</p>
       <ul class="list-group">
@@ -406,5 +493,46 @@
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+      // =========================
+// SORT FUNCTION
+// =========================
+$("#sortSelect").on("change", function() {
+    var value = $(this).val();
+    var $cards = $(".cards");
+    var $container = $(".row");
+
+    $cards.sort(function(a, b) {
+        var nameA = $(a).find(".card-title").text().toLowerCase();
+        var nameB = $(b).find(".card-title").text().toLowerCase();
+
+        var priceA = parseFloat($(a).find("span:last, p").text().replace("$", ""));
+        var priceB = parseFloat($(b).find("span:last, p").text().replace("$", ""));
+
+        if (value === "name") return nameA.localeCompare(nameB);
+        if (value === "price-low-high") return priceA - priceB;
+        if (value === "price-high-low") return priceB - priceA;
+    });
+
+    $cards.each(function() {
+        $container.append(this);
+    });
+});
+
+
+// =========================
+// GRID / LIST VIEW
+// =========================
+$(".view-btn").on("click", function() {
+    $(".view-btn").removeClass("active");
+    $(this).addClass("active");
+
+    if ($(this).attr("title") === "List view") {
+        $(".row").addClass("list-view");
+    } else {
+        $(".row").removeClass("list-view");
+    }
+});
+    </script>
   </body>
 </html>
