--- a/Asus.html
+++ b/Asus.html
@@ -55,9 +55,9 @@
   margin-top: 5px;
   font-size: 14px;
 }
-.row{
-  padding-left: 40px;
-}
+/* .row{
+  padding-left: 10px;
+} */
  .ssss {
    background-color: #fff;
    border: 1px solid #ddd;
@@ -205,7 +205,7 @@
 
     <!-- ------------------info section------------ -->
     <div class="head">
-      <h6>Dell Product Catalog</h6>
+      <h6>ASUS Product Catalog</h6>
       <p>
         Browse our complete selection of Dell products. All items come with
         manufacturer Warranty and our dedicated support.
@@ -214,11 +214,11 @@
 
     <div class="info-section">
       <div class="info-box">
-        <h6>2</h6>
+        <h6>3</h6>
         <p>Products Available</p>
       </div>
       <div class="info-box">
-        <h6>2</h6>
+        <h6>3</h6>
         <p>Product Categories</p>
       </div>
       <div class="info-box">
@@ -228,37 +228,56 @@
     </div>
     <!-- -----------------card------------------------- -->
     <div class="row">
-      <h5>Display</h5>
-      <div class="col-md-4 acercard">
-        <div class="card2" style="width: 18rem">
-          <img
-            src="images/Dell ultra sharp.jpg"
-            class="card-img-top"
-            alt="..."
-          />
-          <div class="card-body">
-            <h5 class="card-title">Dell</h5>
-            <p class="card-text">Dell UltraSharp 27" 4K Monitor</p>
-            <span>⭐⭐⭐⭐ (234)</span><br />
-            <del>699.99</del>
-            <span>$549.99</span>
+        <div class="col-md-4 cards">
+          <div class="card" style="width: 18rem">
+            <img src="images/Asus Rog.jpg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">ASUS</h5>
+              <p class="card-text">ASUS ROG Strix Z790-E Gaming WiFi</p>
+              <span>⭐⭐⭐⭐ (156)</span><br />
+              <del>$529.99</del>
+              <span>$449.99</span>
+            </div>
           </div>
         </div>
-      </div>
 
-      <h5>Notebook</h5>
-      <div class="col-md-4 acercard">
-        <div class="card2" style="width: 18rem">
-          <img src="images/Dell XPS 15.jpg" class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">Dell</h5>
-            <p class="card-text">Dell XPS 15 Laptop</p>
-            <span>⭐⭐⭐⭐ (289)</span>
-            <p>$1899.99</p>
+             <div class="col-md-4 cards">
+          <div class="card" style="width: 18rem">
+            <img
+              src="images/Asus Rog Swift.jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">ASUS</h5>
+              <p class="card-text">ASUS ROG Swift 34" Curved Gaming...</p>
+              <span>⭐⭐⭐⭐ (187)</span>
+              <p>$899.99</p>
+            </div>
           </div>
         </div>
+
+            <div class="col-md-4 cards">
+          <div class="card" style="width: 18rem">
+            <img
+              src="images/Zephyrus G14 gaming laptop.jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">ASUS</h5>
+              <p class="card-text">
+                ASUS ROG Zephyrus G14 Curved Gaming Laptop
+              </p>
+              <span>⭐⭐⭐⭐ (341)</span><br />
+              <del>1899.99</del>
+              <span>$1649.99</span>
+            </div>
+          </div>
+        </div>
+
       </div>
-    </div>
+    
 
     <!-- ----------------------------------------------- -->
   <div class="box112233">
