--- a/Contact.html
+++ b/Contact.html
@@ -88,11 +88,11 @@
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="Dell.html">Dell</a></li>
-                <li><a class="dropdown-item" href="#">Acer</a></li>
-                <li><a class="dropdown-item" href="#">Toshiba</a></li>
-                <li><a class="dropdown-item" href="#">HP</a></li>
-                <li><a class="dropdown-item" href="#">ASUS</a></li>
-                <li><a class="dropdown-item" href="#">Lenovo</a></li>
+                <li><a class="dropdown-item" href="acer.html">Acer</a></li>
+                <li><a class="dropdown-item" href="Toshiba.html">Toshiba</a></li>
+                <li><a class="dropdown-item" href="Hp.html">HP</a></li>
+                <li><a class="dropdown-item" href="Asus.html">ASUS</a></li>
+                <li><a class="dropdown-item" href="lenovo.html">Lenovo</a></li>
               </ul>
             </li>
           </ul>
